Fix CORS for localhost access to Railway API

--- a/.env.production
+++ b/.env.production
@@ -18,7 +18,7 @@ LOG_CHANNEL=stderr
 LOG_STACK=single
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=${DATABASE_HOST}
 DB_PORT=${DATABASE_PORT}
 DB_DATABASE=${DATABASE_NAME}
