Add auto-migration and seeding for Railway

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -22,7 +22,7 @@ cmds = [
 cmds = [
     "php artisan config:cache --no-interaction",
     "php artisan migrate:fresh --seed --force --no-interaction",
-    "php artisan storage:link --force || echo 'Storage link failed, continuing...'",
+    "php artisan storage:link --force",
     "php artisan route:cache --no-interaction",
     "php artisan view:cache --no-interaction"
 ]
