--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=${RAILWAY_STATIC_URL}
+APP_URL=https://takmirapilaravel-production.up.railway.app/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,11 +19,11 @@ LOG_STACK=single
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=${DATABASE_HOST}
-DB_PORT=${DATABASE_PORT}
-DB_DATABASE=${DATABASE_NAME}
-DB_USERNAME=${DATABASE_USER}
-DB_PASSWORD=${DATABASE_PASSWORD}
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
+DB_DATABASE=railway
+DB_USERNAME=root
+DB_PASSWORD=yuqgDtNuIwEgHNRaTGgfCczBDowyPLOe
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
